src/objects/HWS_Product_Serviceable_Sales_Item__c/HWS_Product_Serviceable_Sales_Item__c.object-meta.xml
<CustomObject>
    <label>Product Serviceable Sales Item</label>
    <nameField>
        <displayFormat>SSI-{000000000}</displayFormat>
        <label>Product Serviceable Sales Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Serviceable Sales Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>