src/objects/HWS_Product_Serviceable_Sales_Item__c/fields/HWS_Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>HWS_Is_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Processed</label>
    <type>Checkbox</type>
</CustomField>