src/objects/HWS_Product_Serviceable_Sales_Item__c/fields/HWS_NSNCode__c.field-meta.xml
<CustomField>
    <fullName>HWS_NSNCode__c</fullName>
    <description>The Product Code for the Sales Item</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NSN Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>