src/objects/HWS_Product_Serviceable_Sales_Item__c/fields/HWS_Proprietary_Note__c.field-meta.xml
<CustomField>
    <fullName>HWS_Proprietary_Note__c</fullName>
    <description>Created for HWS and actual source of this field is Puma1/Puma2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Proprietary Note</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>