src/objects/HWS_Product_Serviceable_Sales_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HWS_NSNCode__c</columns>
    <columns>HWS_Is_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>