src/objects/HWS_Product_Serviceable_Sales_Item__c/listViews/Parts_at_Salesforce_Staging.listView-meta.xml
<ListView>
    <fullName>Parts_at_Salesforce_Staging</fullName>
    <columns>HWS_NSNCode__c</columns>
    <columns>NAME</columns>
    <columns>HWS_Part_Name__c</columns>
    <columns>HWS_Part_Number__c</columns>
    <columns>HWS_Alternate_code_value__c</columns>
    <columns>HWS_Alternate_code_type__c</columns>
    <columns>HWS_SPS_Last_order_date__c</columns>
    <columns>HWS_Material_Type__c</columns>
    <columns>HWS_Global_Service_lead_time__c</columns>
    <filterScope>Everything</filterScope>
    <label>Parts at Salesforce Staging</label>
</ListView>